# flow_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
flow_analysis/: fit_forms.py  flow.py
flow_analysis/measurements/: Q.py  scales.py
flow_analysis/readers/: __init__.py  read_grid.py  read_hdf5.py  read_hirep.py  read_hp.py
flow_analysis/stats/: autocorrelation.py  bootstrap.py
