[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_analysis"
version = "0.0.1"
authors = [{name="Ed Bennett", email="e.j.bennett@swansea.ac.uk"}]
description = "A small tool to bootstrap gradient flow data."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edbennett/flow_analysis"
"Bug Tracker" = "https://github.com/edbennett/flow_analysis/issues"
